--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	<link rel="stylesheet" href="resources/css/main.css">
 </head>
 <body>
+	<!-- MENU -->
 	<div class="menu">
 		<img src="resources/imgs/logo-full.png" alt="logo" class="menu--logo">
 
@@ -22,5 +23,18 @@
 			<a href="#contact">Contact</a>
 		</div>
 	</div>
+
+	<!-- HEADER -->
+	<header class="header">
+		<div class="content">
+			<p class="header-title">Mamyq</p>
+			<p class="header-subtitle">помощник людей с ограниченными возможностями в мире моды</p>
+
+			<div class="header-btns">
+				<a href="#" class="btn">Learn more</a>
+				<a href="#" class="btn">Donate</a>
+			</div>
+		</div>
+	</header>
 </body>
 </html>
