--- a/index.html
+++ b/index.html
@@ -36,5 +36,25 @@
 			</div>
 		</div>
 	</header>
+
+	<!-- ABOUT US -->
+	<section class="aboutus" id="aboutus">
+		<div class="content">
+			<p class="aboutus-title">Кто мы?</p>
+			<p class="aboutus-subtitle">Новый стартап по пошиву адаптивной одежды, созданный группой активных студентов из Алматы.</p>
+			<p class="aboutus-title">Наша цель</p>
+			<p class="aboutus-subtitle">облегчить жизнь людей с ограниченными возможностями, улучшив функциональность одежды.</p>
+			<p class="aboutus-title">Наша продукция</p>
+			<p class="aboutus-subtitle">
+				-Футболка с магнитными застежками по пошиву рукавов сверху<br>
+				-Футболка с магнитными кнопками по пошиву рукавов снизу и боковым швам<br>
+				Наш каталог будет пополняться все больше и больше в будущем
+			</p>
+
+			<a href="#" class="btn">Learn more</a>
+		</div>
+
+		<img src="resources/imgs/cont-1.jpg" alt="">
+	</section>
 </body>
 </html>
