--- a/index.html
+++ b/index.html
@@ -56,5 +56,46 @@
 
 		<img src="resources/imgs/cont-1.jpg" alt="">
 	</section>
+
+	<!-- DESCRIPTION -->
+
+	<section class="description">
+		<div class="content">
+			<p class="description-title">Почему наши футболки стоят вашего внимания? </p>
+
+			<div class="cards">
+
+				<div class="card">
+					<img src="./resources/imgs/description-1.jpg" alt="">
+					<p class="description-card-title">Удобство</p>
+
+					<p class="description-card-subtitle">удобство снимания и надевания из-за магнитных кнопок, которые не требуют усилий для застегивания </p>
+
+					<a href="#" class="btn">Learn more ></a>
+				</div>
+
+				<div class="card">
+					<img src="./resources/imgs/description-2.jpg" alt="">
+					<p class="description-card-title">Качество</p>
+
+					<p class="description-card-subtitle">качественные и не раздражающие кожу материалы 
+						отсутствие бирок и этикеток </p>
+
+					<a href="#" class="btn">Learn more > </a>
+				</div>
+
+				<div class="card">
+					<img src="./resources/imgs/description-3.jpg" alt="">
+					<p class="description-card-title">Индивидуальность</p>
+
+					<p class="description-card-subtitle">возможность самому выбрать принт/текст для футболки </p>
+
+					<a href="#" class="btn">Learn more ></a>
+				</div>
+			</div>
+		</div>
+	</section>
+
+
 </body>
 </html>
