--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 	<!-- DESCRIPTION -->
 
 	<section class="description">
-		<div class="content">
+		<div class="content-description">
 			<p class="description-title">Почему наши футболки стоят вашего внимания? </p>
 
 			<div class="cards">
