--- a/index.html
+++ b/index.html
@@ -18,10 +18,18 @@
 	<div class="menu">
 		<img src="resources/imgs/logo-full.png" alt="logo" class="menu--logo">
 
-		<div class="menu-list">
+		<div class="menu-list" id="menu">
 			<a href="#home">Home</a>
 			<a href="#aboutus">About us</a>
 			<a href="#contact">Contact</a>
+
+			<span id="close">x</span>
+		</div>
+
+		<div class="burger" id="burger">
+			<span></span>
+			<span></span>
+			<span></span>
 		</div>
 	</div>
 
@@ -165,5 +173,6 @@
 	</footer>
 
 
+	<script type="text/javascript" src="resources/js/main.js"></script>
 </body>
 </html>
